[package]
name = "rtsp-tui"
version = "0.1.1"
edition = "2024"
rust-version = "1.86"
description = "High-performance terminal RTSP camera viewer with discovery and multi-stream TUI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ty1an/RTSP-TUI"
homepage = "https://github.com/Ty1an/RTSP-TUI"
keywords = ["rtsp", "tui", "camera", "terminal", "video"]
exclude = ["SKILL.MD", ".DS_Store", "target/*"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
crossterm = "0.29.0"
futures-util = "0.3.31"
if-addrs = "0.13.4"
ipnet = "2.11.0"
openh264 = "0.8.1"
parking_lot = "0.12.3"
quick-xml = "0.38.3"
ratatui = "0.30.0"
retina = "0.4.13"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time", "net", "sync", "signal", "io-util"] }
url = "2.5.4"
dirs = "6.0.0"
base64 = "0.22.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
incremental = false
debug = 0
debug-assertions = false
overflow-checks = false
